@@ -1,17 +1,12 @@
-<<<<<<< src/main/java/fr/uparis/pandaparser/Config.java
 package fr.uparis.pandaparser;
 
-public class Config {
-    public static final String appName = "panda-parser";
-}
-=======
-package fr.uparis.pandaparser;
 
 import java.util.Arrays;
 import java.util.List;
 
 public class Config {
+    public static final String appName = "panda-parser";
     public static int TIMEOUT = 100;
-    public static List<String> OPTION = Arrays.asList("MD");
+    public static List<String> OPTION = List.of("MD");
 }
->>>>>>> src/main/java/fr/uparis/pandaparser/Config.java
+
